style.css
/* RESET */
* {
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
}

/* THEME */
body.light {
  background-color: #f0f0f0;
  color: #222;
}

body.dark {
  background-color: #1e1e1e;
  color: #fff;
}

/* ----- MOBILE DEFAULT STYLES ----- */
/* HEADER */
header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  background-color: #4a90e2;
  color: #fff;
  padding: 0.7rem;
}

.header-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.menu-btn,
.theme-toggle {
  background: none;
  border: none;
  color: #fff;
  cursor: pointer;
  font-size: 2rem;
}

/* SIDEBAR */
.sidebar {
  position: fixed;
  top: 0;
  left: -230px;
  width: 230px;
  height: 100%;
  background-color: #333;
  color: #fff;
  padding: 0.7rem;
  transition: left 0.3s ease;
}

.sidebar.open {
  left: 0;
}

.close-btn {
  background-color: transparent;
  border: none;
  color: #fff;
  font-size: 1.7rem;
  cursor: pointer;
}

.sidebar ul {
  list-style-type: none;
  margin-top: 1rem;
}

.sidebar li {
  margin: 1rem 0;
}

.sidebar a {
  color: #fff;
  font-size: 1.1rem;
  text-decoration: none;
}

/* CARDS */
.card-container {
  display: grid;
  grid-template-columns: 1fr;
  gap: 5rem;
  margin-top: 5rem;
  padding: 1rem;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  gap: 1rem;
  background-color: rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(6px);
  border-radius: 8px;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
  padding: 1rem;
  transition: box-shadow 0.3s ease-in-out;
  width: 100%;
  height: 10rem;
}

.card:hover {
  box-shadow: 1px 1px 5px #000;
}

#quote-btn {
  background-color: #4a90e2;
  border: none;
  border-radius: 8px;
  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
  color: #fff;
  cursor: pointer;
  font-size: 1rem;
  padding: 8px;
  width: 10rem;
  transition: box-shadow 0.3s ease-in-out;
}

#quote-btn:hover {
  box-shadow: none;
}

textarea {
  font-size: 1.1rem;
  height: 4rem;
  padding: 0.7rem;
}

/* FOOTER */
footer {
  position: fixed;
  bottom: 0;
  font-size: 0.8rem;
  opacity: 0.7;
  padding: 1rem;
  text-align: center;
  width: 100%;
}

